Стилизация страницы навигации

--- a/index.html
+++ b/index.html
@@ -4,41 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Навигация по проекту</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-        }
-        h1 {
-            color: #333;
-        }
-        ul {
-            list-style-type: none;
-            padding: 0;
-        }
-        li {
-            margin: 10px 0;
-        }
-        a {
-            text-decoration: none;
-            color: #007BFF;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css"> <!-- Подключаем внешний CSS файл -->
 </head>
 <body>
 
     <h1>Навигация по проекту</h1>
-    <ul>
-        <li><a href="feed/index.html">Папка Feed</a></li>
-        <li><a href="messenger/index.html">Папка Messenger</a></li>
-        <li><a href="notification/index.html">Папка Notification</a></li>
-        <li><a href="profile/index.html">Папка Profile</a></li>
-        <li><a href="reg_auth/index.html">Папка Регистрация/Авторизация</a></li>
-        <li><a href="settings/index.html">Папка Настройки</a></li>
-    </ul>
+    <div class="tile-container">
+        <a class="tile" href="feed/index.html">Главная страница</a>
+        <a class="tile" href="messenger/index.html">Мессенджер</a>
+        <a class="tile" href="notification/index.html">Уведомления</a>
+        <a class="tile" href="profile/index.html">Профиль</a>
+        <a class="tile" href="reg_auth/index.html">Регистрация/Авторизация</a>
+        <a class="tile" href="settings/index.html">Настройки</a>
+    </div>
 
 </body>
 </html>
