--- a/index.html
+++ b/index.html
@@ -18,5 +18,12 @@
         <a class="tile" href="settings/index.html">Настройки</a>
     </div>
 
+    <h2>Ветки проекта</h2>
+    <ul id="branches-list">
+        <!-- Список веток будет добавлен здесь -->
+    </ul>
+
+<script src="script.js"></script>
+
 </body>
 </html>
