--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
 
     <h1>Навигация по проекту</h1>
+    <div id="current-branch" style="text-align: center; margin-bottom: 20px;"></div> <!-- Элемент для отображения текущей ветки -->
+    
     <div class="tile-container">
         <a class="tile" href="feed/index.html">Главная страница</a>
         <a class="tile" href="messenger/index.html">Мессенджер</a>
@@ -18,6 +20,7 @@
         <a class="tile" href="settings/index.html">Настройки</a>
     </div>
 
+    <script src="script.js"></script> <!-- Подключаем JavaScript файл -->
+
 </body>
-<script src="script.js"></script> <!-- Подключаем JavaScript файл -->
 </html>
