исправление блока комментариев

--- a/feed/index.html
+++ b/feed/index.html
@@ -33,7 +33,7 @@
                 <span class="send-comment" role="button" aria-label="Отправить комментарий">➡️</span>
                 <div class="comments-container">
                     <!-- Примеры комментариев -->
-                    <div class="comment">Первый комментарий</div>
+                    <div class="comment">Первый комментарий Первый комментарий Первый комментарий Первый комментарий Первый комментарий Первый комментарий</div>
                     <div class="comment">Второй комментарий</div>
                     <div class="comment">Третий комментарий</div>
                     <div class="comment">Четвертый комментарий, который длиннее 20 символов...</div>
